--- a/themes/flexblock/_config.yml
+++ b/themes/flexblock/_config.yml
@@ -6,16 +6,16 @@ menu:
   关于: /about
 
 # 主页banner图
-banner: https://qiniu.sukoshi.xyz/src/images/68686407_p0.jpg
+banner: https://imgs.aixifan.com/o_1dj1ntbbl13km9jpf9j9a49ag2k.jpg
 
 # 站点通知信息
-notice: flex-block主题部分重构，详情查看https://github.com/miiiku/flex-block
+notice:  Warning! Warning!
 
 # 作者信息
 author:
-  name: Sukoshi
-  avatar: https://s.gravatar.com/avatar/2d6b803eea37de0257620d5fabee7e64?s=200&r=g&d=retro
-  description: 贵在坚持
+  name: Guduyili
+  avatar: https://img.touxiangkong.com/uploads/allimg/2023030421/rtgow00dcop.jpg
+  description: The persistence of an ordinary person
 
 toc:
   max_depth: 3 # 生成 TOC 的最大深度
@@ -103,5 +103,5 @@ social_icon:
     ins     :
     zhihu   :
     weibo   : 
-    github  : https://github.com/miiiku/
-    twitter : https://twitter.com/guanquanhong
+    github  : https://github.com/guduyili
+    twitter :  
