--- a/themes/flexblock/_config.yml
+++ b/themes/flexblock/_config.yml
@@ -34,7 +34,7 @@ comments:
     placeholder: 随便说点什么叭～ # 评论框占位提示符
     avatar: mp # Gravatar 头像展示方式
     pageSize: 10 # 评论列表分页，每页条数
-    lang: en # 多语言支持
+    lang: ja # 多语言支持
     visitor: true # 文章访问量统计
     recordIP: true # 是否记录评论者IP
     enableQQ: false # 是否启用昵称框自动获取QQ昵称和QQ头像，开启后是在昵称框输入QQ号码进行获取
