--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-# Hexo Configuration
-## Docs: https://hexo.io/docs/configuration.html
-## Source: https://github.com/hexojs/hexo/
+# Hexo 配置
+## 文档: https://hexo.io/zh-cn/docs/configuration.html
+## 源码: https://github.com/hexojs/hexo/
 
-# Site
+# 网站
 title: GuDu-Blog
 subtitle: ''
 description: ''
@@ -11,16 +11,16 @@ keywords:
 language: en
 timezone: ''
 
-# URL
-## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
+# 网址
+## 如果您的网站存放在子目录中，例如 http://yoursite.com/blog，则请将您的 url 设为 http://yoursite.com/blog 并把 root 设为 /blog/
 url: https://guguyili.us.kg/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
-  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
-  trailing_html: true # Set to false to remove trailing '.html' from permalinks
+  trailing_index: true # 设为 false 来去掉永久链接尾部的 index.html
+  trailing_html: true # 设为 false 来去掉永久链接尾部的 .html
 
-# Directory
+# 目录
 source_dir: source
 public_dir: public
 tag_dir: tags
@@ -30,13 +30,13 @@ code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
 
-# Writing
-new_post_name: :title.md # File name of new posts
+# 写作
+new_post_name: :title.md # 新文章的文件名称
 default_layout: post
-titlecase: false # Transform title into titlecase
+titlecase: false # 将标题转换为 title case
 external_link:
-  enable: true # Open external links in new tab
-  field: site # Apply to the whole site
+  enable: true # 在新标签中打开链接
+  field: site # 对整个网站生效
   exclude: ''
 filename_case: 0
 render_drafts: false
@@ -55,82 +55,83 @@ prismjs:
   line_number: true
   tab_replace: ''
 
-# Home page setting
-# path: Root path for your blogs index page. (default = '')
-# per_page: Posts displayed per page. (0 = disable pagination)
-# order_by: Posts order. (Order by date descending by default)
+# 主页设置
+# path: 博客索引页的根路径。（默认 = ''）
+# per_page: 每页显示的文章量 (0 = 关闭分页功能)
+# order_by: 文章排序方式 (默认按日期降序排列)
 index_generator:
   path: ''
   per_page: 10
   order_by: -date
 
-# Category & Tag
+# 分类 & 标签
 default_category: uncategorized
 category_map:
 tag_map:
 
-# Metadata elements
-## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
+# 元数据元素
+## https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element/meta
 meta_generator: true
 
-# Date / Time format
-## Hexo uses Moment.js to parse and display date
-## You can customize the date format as defined in
-## http://momentjs.com/docs/#/displaying/format/
+# 日期 / 时间格式
+## Hexo 使用 Moment.js 来解析和显示日期
+## 您可以根据 http://momentjs.com/docs/#/displaying/format/ 来修改日期格式
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
-## updated_option supports 'mtime', 'date', 'empty'
+## updated_option 支持 'mtime', 'date', 'empty'
 updated_option: 'mtime'
 
-# Pagination
-## Set per_page to 0 to disable pagination
+# 分页
+## 设置每页显示的文章数量，设为 0 表示关闭分页功能
 per_page: 10
 pagination_dir: page
 
-# Include / Exclude file(s)
-## include:/exclude: options only apply to the 'source/' folder
+# 包括 / 排除 文件
+## include:/exclude: 选项只对 'source/' 文件夹有效
 include:
 exclude:
 ignore:
 
-# Extensions
-## Plugins: https://hexo.io/plugins/
-## Themes: https://hexo.io/themes/
+# 扩展
+## 插件: https://hexo.io/plugins/
+## 主题: https://hexo.io/themes/
 theme: flexblock
 
-# Deployment
-## Docs: https://hexo.io/docs/one-command-deployment
+# 部署
+## 文档: https://hexo.io/zh-cn/docs/one-command-deployment
 deploy:
   type: ''
 
 
-#Header
+# 页头
 menu:
   Home:/
 
-#主页banner图
+# 主页 banner 图
 banner:
 
-#站点通知信息
+# 站点通知信息
 notice:
 
-#作者信息
+# 作者信息
 author: 
   name: Guduyili
   avatar:
   description:
 
+# 目录
 toc:
-  max_depth: 3 #生成TOC的最大深度
-  min_depth: 2 #生成TOC的最小深度
+  max_depth: 3 # 生成目录的最大深度
+  min_depth: 2 # 生成目录的最小深度
 
+# 评论
 comments:
   enable: true
-  use: 'valine' # valine || disqus
+  use: 'valine' # valine 或 disqus
   # valine 评论
-  # docs: https://valine.js.org
-  # You can get your appid and appkey from https://leancloud.cn
-  # 这里appId和appKey一定一定要改成自己的，没有的话去https://leancloud.cn这个网站注册创建一个
+  # 文档: https://valine.js.org
+  # 您可以从 https://leancloud.cn 获取您的 appid 和 appkey
+  # 这里的 appId 和 appKey 一定要改成自己的，没有的话去 https://leancloud.cn 这个网站注册创建一个
   valine:
     appId:
     appKey:
@@ -140,13 +141,13 @@ comments:
     visitor: true
     pageSize: 10
   # disqus 评论
-  # docs: https://disqus.com/
+  # 文档: https://disqus.com/
   disqus:
     website:
     error: 如果你看不到评论，那么就真的看不到评论 w(゜Д゜)w
 
-# dplayer 视频播放
-# docs: http://dplayer.js.org/#/zh-Hans/
+# dplayer 视频播放器
+# 文档: http://dplayer.js.org/#/zh-Hans/
 dplayer:
   enable: true
   theme: "#b7daff"
@@ -154,8 +155,8 @@ dplayer:
   loop: false
   mutex: true
 
-# aplayer 音频播放
-# docs: https://aplayer.js.org/#/zh-Hans/
+# aplayer 音频播放器
+# 文档: https://aplayer.js.org/#/zh-Hans/
 aplayer:
   enable: true
   theme: "#b7daff"
@@ -169,16 +170,16 @@ beian:
 
 # 谷歌分析
 google_analytics: UA-165681463-1
-# gauges分析
+# gauges 分析
 gauges_analytics: 
 # 百度分析
 baidu_analytics: 77cce6624f1114785af5e77d00cbf93c
 # 腾讯分析
 tencent_analytics: 66537616
-# 站点ico
+# 站点图标
 favicon: /favicon.ico
 
-# Social Icon
+# 社交图标
 social_icon:
   enable: true
   icons:
@@ -186,4 +187,4 @@ social_icon:
     zhihu   :
     weibo   :  
     github  : https://github.com/guduyili
-    twitter : 
+    twitter :
