--- a/themes/flexblock/_config.yml
+++ b/themes/flexblock/_config.yml
@@ -6,7 +6,7 @@ menu:
   About: /about
 
 # 主页banner图
-banner: http://46.3.104.237/lbl2.jpg
+banner: https://imgs.aixifan.com/o_1dj1ntbbl13km9jpf9j9a49ag2k.jpg
 
 # 站点通知信息
 notice:  Warning! Warning!
