--- a/_config.yml
+++ b/_config.yml
@@ -188,3 +188,12 @@ social_icon:
     weibo   :  
     github  : https://github.com/guduyili
     twitter :
+
+
+# Lazyload (圖片懶加載)
+# https://github.com/verlok/vanilla-lazyload
+lazyload:
+  enable: true
+  field: post # site/post
+  loadingImg: /img/friend_404.gif
+  preloadRatio: 1 #设置懒加载的范围
