--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^4.0.0",
     "hexo-generator-tag": "^2.0.0",
+    "hexo-lazy-image": "^1.0.0",
     "hexo-lazyload-image": "^1.1.2",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.3.0",
