--- a/themes/flexblock/_config.yml
+++ b/themes/flexblock/_config.yml
@@ -17,12 +17,23 @@ author:
   avatar: https://img.touxiangkong.com/uploads/allimg/2023030421/rtgow00dcop.jpg
   description: The persistence of an ordinary person
 
+# toc:
+#   max_depth: 3 # 生成 TOC 的最大深度
+#   min_depth: 2 # 生成 TOC 的最小深度
+
+
 toc:
-  max_depth: 3 # 生成 TOC 的最大深度
-  min_depth: 2 # 生成 TOC 的最小深度
+  maxdepth: 3
+  class: toc
+  slugify: transliteration
+  decodeEntities: false
+  anchor:
+    position: after
+    symbol: '#'
+    style: header-anchor
 
 comments:
-  enable: false
+  enable: true
   use: 'valine' # valine || disqus
   # valine 评论
   # docs: https://valine.js.org
@@ -108,8 +119,8 @@ social_icon:
 
 
     
-  post_asset_folder: true;
+  post_asset_folder: true
   marked:
-    prependRoot: true;
-    postAsset: true;
+    prependRoot: true
+    postAsset: true
 
