--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           submodules: true  # 拉取子模块（如主题仓库）
 
-      - name: Use Node.js 16 (强制指定版本)
+      - name: Use Node.js 16 
         uses: actions/setup-node@v4
         with:
           node-version: 16  # Hexo CLI 要求 Node.js >=14，推荐使用 LTS 版本
@@ -89,9 +89,5 @@ jobs:
         with:
           gitee-username: 后藤一里  # 建议使用英文用户名（如 "guduyili"）
           gitee-password: ${{ secrets.GITEE_PASSWORD }}
-          gitee-repo: 后藤一里/GDYL-Blog     # 建议使用英文仓库名（如 "GDYL-Blog"）
-<<<<<<< HEAD
+          gitee-repo: 后藤一里/GDYL-Blog    # 建议使用英文仓库名（如 "GDYL-Blog"）
           branch: master
-=======
-          branch: master
->>>>>>> 1a825d29d31e6e8fa3520cacb4a82f8aa51187e9
