--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
-name: Hexo Deploy & Sync
+name: Hexo deploy
 
-on:
+on: 
   push:
     paths-ignore:
       - 'source/_GoNotes/**'
@@ -8,79 +8,65 @@ on:
       - 'source/_PythonNotes/**'
       - 'source/_drafts/**'
       - '.github/**'
-
 jobs:
-  build_and_deploy:
-    name: Build & Deploy to GitHub Pages
+  build:
     runs-on: ubuntu-latest
     steps:
-      # 1. 检出代码（包括子模块）
-      - name: Checkout Repository
+      - name: Checkout
         uses: actions/checkout@v3
         with:
-          submodules: recursive  # 递归拉取子模块（如主题仓库）
-          fetch-depth: 0          # 获取完整提交历史
+          submodules: true
 
-      # 2. 设置 Node.js 16（Hexo CLI 要求 >=14）
-      - name: Use Node.js 16
+      - name: Set up Node.js 16
         uses: actions/setup-node@v4
         with:
-          node-version: 16       # 选择 LTS 版本，确保兼容性
+          node-version: 16
 
-      # 3. 安装依赖（全局 + 项目依赖）
-      - name: Install Hexo CLI
-        run: npm install -g hexo-cli@latest  # 安装最新 Hexo 命令行工具
+      - name: Clean cache
+        uses: actions/cache/restore@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
-      - name: Install Project Dependencies
-        run: npm ci  # 基于 package-lock.json 干净安装依赖
+      - name: Install dependencies
+        run: npm ci
 
-      # 4. 生成静态文件
-      - name: Generate Hexo Static Files
-        run: hexo generate  # 等同于 hexo g
+      - name: Generate Hexo site
+        run: npx hexo generate
 
-      # 5. 部署到 GitHub Pages（手动部署，避免第三方 Action 限制）
-      - name: Deploy to GitHub Pages
+      - name: Deploy Hexo site
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.HEXO_DEPLOY_KEY }}  # GitHub 部署密钥
+          HEXO_DEPLOY_KEY: ${{ secrets.HEXO_DEPLOY_KEY }}
         run: |
-          # 配置 SSH 密钥
           mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" | tee ~/.ssh/id_rsa > /dev/null
+          echo "$HEXO_DEPLOY_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts  # 信任 GitHub 主机
-
-          # 配置 Git 用户信息（与 GitHub Pages 仓库一致）
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
           git config --global user.name "guduyili"
           git config --global user.email "LZY3376163189@163.com"
+          npx hexo deploy
 
-          # 执行部署（需在 _config.yml 中配置正确的 deploy 字段）
-          hexo deploy  # 等同于 hexo d
-
-  sync_to_gitee:
-    name: Sync to Gitee
-    needs: build_and_deploy
+  sync:
+    needs: build
     runs-on: ubuntu-latest
     steps:
-      # 1. 镜像同步 GitHub 到 Gitee（使用原生 Git 命令，避免第三方工具）
-      - name: Clone Bare Repository
-        run: git clone --bare git@github.com:guduyili/GDYL-Blog.git
+      - name: Sync to Gitee
+        uses: wearerequired/git-mirror-action@v1.3.1
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.HEXO_DEPLOY_KEY }}
+        with:
+          source-repo: git@github.com:guduyili/GDYL-Blog.git
+          destination-repo: git@gitee.com:Absolutelynothing/GDYL-Blog.git
 
-      - name: Push to Gitee Mirror
-        working-directory: GDYL-Blog.git
-        run: git push --mirror git@gitee.com:Absolutelynothing/GDYL-Blog.git
-
-  build_gitee_pages:
-    name: Build Gitee Pages
-    needs: sync_to_gitee
+  reload-pages:
+    needs: sync
     runs-on: ubuntu-latest
     steps:
-      # 1. 触发 Gitee Pages 重建（使用官方 Action，确保配置正确）
-      - name: Deploy to Gitee Pages
+      - name: Build Gitee Pages
         uses: yanglbme/gitee-pages-action@main
         with:
-          gitee-username: 后藤一里     # Gitee 用户名（英文，与账户一致）
-          gitee-password: ${{ secrets.GITEE_PASSWORD }}  # Gitee 密码或令牌
-          gitee-repo: 后藤一里/GDYL-Blog          # Gitee 仓库名（英文）
-          branch: master                    # 部署分支（通常为 master 或 gitee-pages）
-          # 可选：指定构建目录（Hexo 默认为 public，若自定义需修改）
-          # build-dir: public
+          gitee-username: 后藤一里
+          gitee-password: ${{ secrets.GITEE_PASSWORD }}
+          gitee-repo: 后藤一里/GDYL-Blog
+          branch: master
+    
