--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Clean Install
         run: |
           npm ci --ignore-scripts
-          npm config set unsafe-perm true
+          npm config set unsafe-perm true  # 修正拼写
           npm rebuild
-
+          npm uninstall hexo-site  # 确认是否需要此步骤，通常不需要
           
       - name: Build Hexo Site
         run: |
@@ -70,6 +70,6 @@ jobs:
         uses: mizuka-wu/gitee-pages-action@v2.0
         with:
           gitee-username: 后藤一里
-          gitee-password: ${{ secrets.GITEE_PASSWORD }}
+          gitee-password: ${{ secrets.GITEE_PASSWORD }}  # 注意检查密码字段拼写
           repo: 后藤一里/GDYL-Blog
           branch: main
