--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,56 +15,52 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4  # 升级到最新版
+        uses: actions/checkout@v3
         with:
           submodules: recursive
           fetch-depth: 0
 
-      - name: Setup Node.js 20.x  # 推荐使用 LTS 版本
+      - name: Use Node.js 18
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
-          cache: 'npm'  # 启用缓存加速依赖安装
+          node-version: 18
 
-      - name: Install Dependencies
-        run: |
-          npm ci --ignore-scripts
-          npm config set unsafe-perm true  # 解决权限问题
+      - name: Install Hexo CLI
+        run: npm install -g hexo-cli@latest
+
+      - name: Install Project Dependencies
+        run: npm ci
 
       - name: Generate Static Files
         run: |
-          hexo clean
+          mkdir -p ./public
           hexo generate
-
       - name: Deploy to GitHub Pages
         env:
           SSH_PRIVATE_KEY: ${{ secrets.HEXO_DEPLOY_KEY }}
         run: |
           mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          echo "$SSH_PRIVATE_KEY" | tee ~/.ssh/id_rsa > /dev/null
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan github.com >> ~/.ssh/known_hosts
-
           cd public
-          git init -b main  # 强制初始化 main 分支
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git init
+          git config --global user.name "guduyili"
+          git config --global user.email "LZY3376163189@163.com"
           git add .
-          git commit -m "Deploy: ${{ github.sha }}"
-          git push -f git@github.com:guduyili/GDYL-Blog.git main:gh-pages  # 推送到 gh-pages 分支
-
+          git commit -m "Update site: ${{ github.sha }}"
+          git push -f git@github.com:guduyili/GDYL-Blog.git main
   sync_to_gitee:
     name: Sync to Gitee Repository
     needs: build_and_deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Mirror Repository
-        uses: wearerequired/git-mirror-action@v1  # 使用标准化镜像工具
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.HEXO_DEPLOY_KEY }}
-        with:
-          source-repo: git@github.com:guduyili/GDYL-Blog.git
-          destination-repo: git@gitee.com:Absolutelynothing/GDYL-Blog.git
+      - name: Clone Bare Repository
+        run: git clone --bare git@github.com:guduyili/GDYL-Blog.git
+
+      - name: Push to Gitee Mirror
+        working-directory: GDYL-Blog.git
+        run: git push --mirror git@gitee.com:Absolutelynothing/GDYL-Blog.git
 
   build_gitee_pages:
     name: Trigger Gitee Pages Build
@@ -77,4 +73,4 @@ jobs:
           gitee-username: 后藤一里
           gitee-password: ${{ secrets.GITEE_PASSWORD }}
           gitee-repo: 后藤一里/GDYL-Blog
-          branch: gh-pages  # 保持与 GitHub 分支一致
+          branch: main
