--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,12 +15,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4  # 升级到最新版本
+        uses: actions/checkout@v4
         with:
           submodules: recursive
           fetch-depth: 0
 
-      - name: Setup Node.js 20.x  # 使用 LTS 版本
+      - name: Setup Node.js 20.x
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
@@ -29,7 +29,7 @@ jobs:
       - name: Install Dependencies
         run: |
           npm ci --ignore-scripts
-          npm config set unsafe-perm true  # 修复权限问题
+          npm audit fix
 
       - name: Generate Static Files
         run: |
@@ -38,11 +38,11 @@ jobs:
 
       - name: Deploy to GitHub Pages
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 改用标准 Token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           cd public
           git init
-          git checkout -b gh-pages  # 强制切换到 gh-pages 分支
+          git checkout -b gh-pages
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
@@ -56,7 +56,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Mirror Repository
-        uses: wearerequired/git-mirror-action@v1  # 标准化镜像工具
+        uses: wearerequired/git-mirror-action@v1
         env:
           SSH_PRIVATE_KEY: ${{ secrets.HEXO_DEPLOY_KEY }}
         with:
@@ -74,4 +74,4 @@ jobs:
           gitee-username: 后藤一里
           gitee-password: ${{ secrets.GITEE_PASSWORD }}
           gitee-repo: 后藤一里/GDYL-Blog
-          branch: gh-pages  # 与 GitHub 分支保持一致
+          branch: gh-pages
