--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,53 +15,57 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
         with:
           submodules: recursive
           fetch-depth: 0
 
-      - name: Setup Node.js 20.x
+      - name: Use Node.js 18
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
-          cache: 'npm'
+          node-version: 18
 
-      - name: Install Dependencies
-        run: |
-          npm ci --ignore-scripts
-          npm audit fix
+      - name: Install Hexo CLI
+        run: npm install -g hexo-cli@latest
+
+      - name: Install Project Dependencies
+        run: npm ci
 
       - name: Generate Static Files
         run: |
-          hexo clean
+          mkdir -p ./public
           hexo generate
 
       - name: Deploy to GitHub Pages
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SSH_PRIVATE_KEY: ${{ secrets.HEXO_DEPLOY_KEY }}
         run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" | tee ~/.ssh/id_rsa > /dev/null
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          
           cd public
           git init
-          git checkout -b gh-pages
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git checkout -b gh-pages  # 创建并切换到 gh-pages 分支
+          git config --global user.name "guduyili"
+          git config --global user.email "LZY3376163189@163.com"
           git add .
-          git commit -m "Deploy: ${{ github.sha }}"
-          git remote add origin https://github.com/guduyili/GDYL-Blog.git
-          git push -f origin gh-pages
+          git commit -m "Update site: ${{ github.sha }}"
+          git remote add origin git@github.com:guduyili/GDYL-Blog.git
+          git push -f origin gh-pages  # 推送至 gh-pages 分支（关键修正点）
 
   sync_to_gitee:
     name: Sync to Gitee Repository
     needs: build_and_deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Mirror Repository
-        uses: wearerequired/git-mirror-action@v1
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.HEXO_DEPLOY_KEY }}
-        with:
-          source-repo: "git@github.com:guduyili/GDYL-Blog.git"
-          destination-repo: "git@gitee.com:Absolutelynothing/GDYL-Blog.git"
+      - name: Clone Bare Repository
+        run: git clone --bare git@github.com:guduyili/GDYL-Blog.git
+
+      - name: Push to Gitee Mirror
+        working-directory: GDYL-Blog.git
+        run: git push --mirror git@gitee.com:Absolutelynothing/GDYL-Blog.git
 
   build_gitee_pages:
     name: Trigger Gitee Pages Build
@@ -74,4 +78,4 @@ jobs:
           gitee-username: 后藤一里
           gitee-password: ${{ secrets.GITEE_PASSWORD }}
           gitee-repo: 后藤一里/GDYL-Blog
-          branch: gh-pages
+          branch: gh-pages  # 与 GitHub 部署分支保持一致（若 Gitee Pages 使用 gh-pages）
