--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,9 @@ jobs:
       
       - name: Install Project Dependencies
         run: npm ci
+      # uninstall hexo-site
+      - name: npm uninstall hexo-site
+        run: npm uninstall hexo-site
 
       - name: Generate Static Files
         run: |
