--- a/_config.yml
+++ b/_config.yml
@@ -12,13 +12,12 @@ language: en
 timezone: ''
 
 # 网址
-## 如果您的网站存放在子目录中，例如 http://yoursite.com/blog，则请将您的 url 设为 http://yoursite.com/blog 并把 root 设为 /blog/
 url: https://guguyili.us.kg/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
-  trailing_index: true # 设为 false 来去掉永久链接尾部的 index.html
-  trailing_html: true # 设为 false 来去掉永久链接尾部的 .html
+  trailing_index: true
+  trailing_html: true
 
 # 目录
 source_dir: source
@@ -31,16 +30,16 @@ i18n_dir: :lang
 skip_render:
 
 # 写作
-new_post_name: :title.md # 新文章的文件名称
+new_post_name: :title.md
 default_layout: post
-titlecase: false # 将标题转换为 title case
+titlecase: false
 external_link:
-  enable: true # 在新标签中打开链接
-  field: site # 对整个网站生效
+  enable: true
+  field: site
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true  # ✅ 唯一定义 post_asset_folder
 relative_link: false
 future: true
 syntax_highlighter: prismjs
@@ -55,11 +54,7 @@ prismjs:
   preprocess: true
   line_number: true
 
-
 # 主页设置
-# path: 博客索引页的根路径。（默认 = ''）
-# per_page: 每页显示的文章量 (0 = 关闭分页功能)
-# order_by: 文章排序方式 (默认按日期降序排列)
 index_generator:
   path: ''
   per_page: 10
@@ -71,42 +66,32 @@ category_map:
 tag_map:
 
 # 元数据元素
-## https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element/meta
 meta_generator: true
 
 # 日期 / 时间格式
-## Hexo 使用 Moment.js 来解析和显示日期
-## 您可以根据 http://momentjs.com/docs/#/displaying/format/ 来修改日期格式
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
-## updated_option 支持 'mtime', 'date', 'empty'
 updated_option: 'mtime'
 
 # 分页
-## 设置每页显示的文章数量，设为 0 表示关闭分页功能
 per_page: 10
 pagination_dir: page
 
 # 包括 / 排除 文件
-## include:/exclude: 选项只对 'source/' 文件夹有效
 include:
 exclude:
 ignore:
 
 # 扩展
-## 插件: https://hexo.io/plugins/
-## 主题: https://hexo.io/themes/
 theme: flexblock
 
 # 部署
-## 文档: https://hexo.io/zh-cn/docs/one-command-deployment
 deploy:
   type: ''
 
-
 # 页头
 menu:
-  Home:/
+  Home: /
 
 # 主页 banner 图
 banner:
@@ -123,17 +108,13 @@ author:
 # 目录
 toc:
   enable: true
-  max_depth: 3 # 生成目录的最大深度
-  min_depth: 2 # 生成目录的最小深度
+  max_depth: 3
+  min_depth: 2
 
 # 评论
 comments:
   enable: true
-  use: 'valine' # valine 或 disqus
-  # valine 评论
-  # 文档: https://valine.js.org
-  # 您可以从 https://leancloud.cn 获取您的 appid 和 appkey
-  # 这里的 appId 和 appKey 一定要改成自己的，没有的话去 https://leancloud.cn 这个网站注册创建一个
+  use: 'valine'
   valine:
     appId:
     appKey:
@@ -142,14 +123,11 @@ comments:
     notify: true
     visitor: true
     pageSize: 10
-  # disqus 评论
-  # 文档: https://disqus.com/
   disqus:
     website:
     error: 如果你看不到评论，那么就真的看不到评论 w(゜Д゜)w
 
 # dplayer 视频播放器
-# 文档: http://dplayer.js.org/#/zh-Hans/
 dplayer:
   enable: true
   theme: "#b7daff"
@@ -158,7 +136,6 @@ dplayer:
   mutex: true
 
 # aplayer 音频播放器
-# 文档: https://aplayer.js.org/#/zh-Hans/
 aplayer:
   enable: true
   theme: "#b7daff"
@@ -191,19 +168,14 @@ social_icon:
     github  : https://github.com/guduyili
     twitter :
 
+# Markdown 解析器配置
+marked:
+  prependRoot: true
+  postAsset: true
 
 # Lazyload (圖片懶加載)
-# https://github.com/verlok/vanilla-lazyload
 lazyload:
   enable: true
-  field: post # site/post
+  field: post
   loadingImg: /img/friend_404.gif
-  preloadRatio: 1 #设置懒加载的范围
-
-
-  post_asset_folder: true
-  marked:
-    prependRoot: true
-    postAsset: true
-
-
+  preloadRatio: 1
