--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "hexo": "^7.3.0",
+    "hexo-asset-image": "^1.0.0",
     "hexo-asset-img": "^1.2.0",
     "hexo-deployer-git": "^4.0.0",
     "hexo-filter-katex": "^1.0.1",
