--- a/themes/flexblock/_config.yml
+++ b/themes/flexblock/_config.yml
@@ -15,7 +15,7 @@ notice:  Warning! Warning!
 author:
   name: Guduyili
   avatar: https://img.touxiangkong.com/uploads/allimg/2023030421/rtgow00dcop.jpg
-  description: The persistence of an ordinary person
+  description: 我心匪石，不可轉也。我心匪席，不可卷也
 
 # toc:
 #   max_depth: 3 # 生成 TOC 的最大深度
