--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-asset-image": "^1.0.0",
     "hexo-asset-img": "^1.2.0",
     "hexo-deployer-git": "^4.0.0",
+    "hexo-deployer-rsync": "^3.0.0",
     "hexo-filter-katex": "^1.0.1",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
