--- a/themes/flexblock/_config.yml
+++ b/themes/flexblock/_config.yml
@@ -14,7 +14,7 @@ notice:  Warning! Warning!
 # 作者信息
 author:
   name: Guduyili
-  avatar: https://img.touxiangkong.com/uploads/allimg/2023030421/rtgow00dcop.jpg
+  avatar: /img/9c0e14447527992b401a1827d37127cd.png
   description: 我心匪石，不可轉也。我心匪席，不可卷也
 
 # toc:
